@@ -1,3 +1,8 @@
+2017-09-15  Allen D. Ball  <ball@sol>
+
+	* src/main/java/ball/databind/PolymorphicTypeMap.java:
+	Initial writing.
+
 2017-09-13  Allen D. Ball  <ball@sol>
 
 	* src/main/java/ball/databind/AbstractObjectMapperConfiguration.java:
